<resources>
    <string name="app_name">Instruments</string>
    <!-- Main Strings -->
    <string name="mainHome">Главная</string>
    <string name="mainTest">Испытание</string>
    <string name="mainFavorite">Избранное</string>
    <string name="mainProfile">Профиль</string>
    <string name="mainSubscribe">Оформить подписку</string>
    <string name="mainSubtitle">Что будем изучать сегодня?</string>
    <string name="mainNumbers">Инструментарий: %1d</string>
    <string name="mainWelcome">Привет, %s!</string>

    <!-- Boarding Strings -->
    <string name="boardingTitle">Начни изучать хирургию вместе с мобильным справочником медицинских инструментов </string>
    <string name="boardingButton">Войти</string>
    <string name="boardingRegistration">Еще нет аккаунта? <b><u>Зарегистрироваться</u></b></string>

    <!-- Login Strings -->
    <string name="loginTitleToolbar">Вход</string>
    <string name="loginMail">Имя пользователя или E-mail</string>
    <string name="loginPassword">Пароль</string>
    <string name="loginRecovery">Забыли пароль?</string>

    <!-- Test Strings -->
    <string name="testTitle">Проверь свои знания</string>
    <string name="testSubTitle">Выбери подходящий уровень сложности </string>
    <string name="testChangeCategory">Выбрать категории и начать</string>
    <string name="testNumbers">%1d вопросов</string>

    <!-- Favorites Strings -->
    <string name="favoritesButton">Тест по избранному</string>

    <!-- Registration Strings -->
    <string name="registrationTitleToolbar">Регистрация</string>
    <string name="registrationName">Имя пользователя</string>
    <string name="registrationMail">E-mail</string>
    <string name="registrationLogin">Уже есть аккаунт? <b><u>Войти</u></b></string>
    <string name="registrationButton">Зарегистрироваться</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>