<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Instruments.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/loginTitleToolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutMail"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/textFields.marginHorizontal"
        android:paddingStart="-13dp"
        app:boxBackgroundMode="filled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:startIconDrawable="@drawable/ic_mail"
        app:startIconTint="@color/bgr_input"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mail"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginMail"
            android:inputType="textEmailAddress"
            android:padding="10dp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/textFields.marginHorizontal"
        android:paddingStart="-13dp"
        app:boxBackgroundMode="filled"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/bgr_input"
        android:layout_marginTop="@dimen/textFields.marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutMail"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/bgr_input"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginPassword"
            android:inputType="textPassword"
            android:padding="10dp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonRecovery"
        style="@style/TextButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/loginRecovery"
        android:layout_marginEnd="@dimen/textFields.marginHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    <RelativeLayout
        android:id="@+id/linearLayoutBottomContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/login.buttonMarginTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonRecovery">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonLogin"
            style="@style/DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button.height"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="@dimen/button.marginHorizontal"
            android:text="@string/boardingButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonRegistration"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/boardingRegistration" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>