<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.BoardingFragment">

    <ImageView
        android:id="@+id/imageViewDoctors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/boarding.doctorsMarginTop"
        android:src="@drawable/doctors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_boarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDoctors"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/BlackNormal14TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/boarding.titleMarginHorizontal"
        android:layout_marginTop="@dimen/boarding.titleMarginTop"
        android:gravity="center"
        android:text="@string/boardingTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <RelativeLayout
        android:id="@+id/linearLayoutBottomContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/boarding.buttonMarginTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonBoarding"
            style="@style/DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button.height"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="@dimen/button.marginHorizontal"
            android:text="@string/boardingButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonRegistration"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/boardingRegistration" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>